-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9
-
None
-
-
486bbc7a5 (dev)
This was caused by https://codereview.qt-project.org/c/qt/qtbase/+/552317
To reproduce, run the text_bengali.qml test in tests/baseline/scenegraph/data/text in Qt Declarative. This should show some bengali text, but now it prints an error from DirectWrite and shows nothing.
For Gerrit Dashboard: QTBUG-131632 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
606785,3 | Fix regression when looking up fallback fonts | dev | qt/qtbase | Status: MERGED | +2 | -1 |